--- a/index.html
+++ b/index.html
@@ -12,9 +12,14 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Nunito:ital,wght@0,200..1000;1,200..1000&family=Pixelify+Sans:wght@400..700&display=swap" rel="stylesheet">
 </head>
 <body>
-    
-    <h1>LIBRARY FILE SYSTEM</h1>
-    <hr>
+    <div class="nav">
+        <h1>📚  LIBRARY FILE SYSTEM</h1>
+        <div>
+            <a href="index.html">Search</a>
+            <a href="">Upload</a>
+            <a href="">Edit</a>
+        </div>
+    </div>
     <div class="main">
         <div class="form">
             <form>
