--- a/edit.html
+++ b/edit.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="author" content="Deepanshi and Disha UwU">
+    <title>Edit file data</title>
     <link rel="icon" type="image" href="fav.jpg"> 
     <link rel="stylesheet" href="style.css">
-    <title>File system</title>
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -17,24 +17,11 @@
         <div>
             <a href="index.html">Search</a>
             <a href="">Upload</a>
-            <a href="edit.html">Edit</a>
+            <a href="">Edit</a>
         </div>
     </div>
     <div class="main">
-        <div class="form">
-            <form>
-                <label for="keyword">Enter Keyword here :</label>
-                <br>
-                <input type="text" name="keyword" id="keyword" placeholder="Keyword" autocomplete="on" required autofocus>
-                <br>
-                <button type="submit" id="submit">Search</button>
-                <button type="reset" id="reset">Reset</button>
-            </form>
-            <div class="list"></div>
 
-        </div>
-        <div id="book"></div>
     </div>
-    <script type="module" src="script.js"></script>
 </body>
 </html>
