--- a/edit.html
+++ b/edit.html
@@ -15,8 +15,8 @@
         <h1>📚 LIBRARY FILE SYSTEM</h1>
         <div>
             <a href="index.html">Search</a>
-            <a href="">Upload</a>
-            <a href="">Edit</a>
+            <a href="upload.html">Upload</a>
+            <a href="edit.html">Edit</a>
         </div>
     </div>
 
